--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
 				<h5 class="title">strong</h5>
 			</div>
 		</li>
+		<li>
+			<img src="img/aaaa9.jpg"/>
+			<div class="image_title">
+				<h5 class="title">en el bunker</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/aaaa10.jpg"/>
+			<div class="image_title">
+				<h5 class="title">strong</h5>
+			</div>
+		</li>
 	</ul>
 </div>
 			</div>
