--- a/index.html
+++ b/index.html
@@ -117,15 +117,75 @@
 			</div>
 		</li>
 		<li>
-			<img src="img/aaaa9.jpg"/>
+			<img src="img/foto2.jpg"/>
 			<div class="image_title">
-				<h5 class="title">en el bunker</h5>
+				<h5 class="title">Con la guitarrita</h5>
 			</div>
 		</li>
 		<li>
-			<img src="img/aaaa10.jpg"/>
+			<img src="img/foto4.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Plaza de armas</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto5.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Año nuevo</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto6.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Paseito por la ciudad</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto7.jpg"/>
 			<div class="image_title">
 				<h5 class="title">strong</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto8.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Paseito</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto9.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Proyectos</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto10.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Una noche hermosa</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto11.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Cine plus de Metro</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto12.jpg"/>
+			<div class="image_title">
+				<h5 class="title">strong</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto22.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Rest. italiano</h5>
+			</div>
+		</li>
+		<li>
+			<img src="img/foto3.jpg"/>
+			<div class="image_title">
+				<h5 class="title">Mi zona</h5>
 			</div>
 		</li>
 	</ul>
