--- a/index.html
+++ b/index.html
@@ -13,19 +13,39 @@
 	<section id="init-section" class="visible">
 		<div class="inicio" id="amor">
 			<div class="container">
+				<h3>NUESTRA CANCION</h3>
 					<h1>Alvaro & Yovanna</h1>
 				<button class="stop">play</button>
 				<article id="story">  
-				  <p>Gracias por llegar a mi vida y brindarme  tu apoyo desde el momento que te conocí, gracias por la paciencia, por escucharme, por tu tiempo  y sobre todo tu comprensión, gracias por enseñarme a dar mis primeros pasos en esta etapa de la vida.</p>
-				  <p> Amor perdona por no ser expresiva y no decirte esto en persona.</p>
-				  <p>¿Sabes lo que me gusta de ti? </p>
-				  <p>Me gusta cuando animas a otros a salir adelante, cuando incentivas a que no se rindan, me gustó mucho cuando me dijiste que no me cerrara al amor, me gusta tu esencia, tu espíritu emprendedor, tu olor, me gusta que estés a mi lado.</p>
-				  <p>Me gustas porque siempre estas tomando la iniciativa y eres proactivo, me gusta cuando comes, me gusta cuando cantas, me gusta cuando me abrazas,  me gustas porque siempre buscas el bienestar a través de una vida sana, me gustas porque eres un chico lindo y determinado…tengo infinidad de cosas más pero no quiero parecer un libro.</p>
-				  <p>¿Sabes una cosa? </p>
-				  <p>Me encanta  verte sonreír, abrazarte, darte besitos, verte comer,  no te imaginas lo mucho que he aprendido de ti y sigo aprendiendo a diario de tus palabras, de tus frases, de tus enseñanzas en todo aspecto.</p>
-				  <p>Quiero decirte lo mucho que me importas, lo mucho que te pienso, lo mucho que te extraño; he aprendido a confiar y tener fe porque tengo la certeza de que Dios te puso en mi camino no por casualidad.</p>
-				  <p>Comprendí que el amor es un proceso y una etapa de la vida en la que gracias a tu valentía y tu ánimo cuando un día me dijiste que jamás me cerrara a la oportunidad de amar, gracias a eso  estoy aquí contigo aprendiendo más sobre el amor, un sentimiento hermoso que empece a sentir como la canción sentir.</p>
-				  <p>...ahora para ver la galería... </p>
+				  <p>Encontré un amor para mí
+					Oh, cariño, sumérgete y sigue mis pasos
+					Bueno, encontré una chica, hermosa y dulce
+					Oh, nunca supe que serías quien me espere
+					Porque sólo éramos chicos cuando nos enamoramos
+					Sin saber cómo era, no me daré por vencido ante ti esta vez
+					Pero cariño, sólo bésame lento, tu corazón es todo lo que poseo
+					Y en tus ojos, sostienes el mío.</p>
+				  <p> Cariño, estoy bailando en la oscuridad, contigo en mis brazos
+					Descalzos sobre el pasto, escuchando nuestra canción favorita
+					Cuando dijiste que eras un desastre, susurré bajo mi respiración
+					Pero lo escuchaste, cariño, luces perfecta esta noche.</p>
+				  <p>Bueno, encontré un hombre, más fuerte que cualquiera que conozco
+					Comparte mis sueños, espero que algún día compartamos un hogar
+					Encontré un amor, para tener más que solo mis secretos
+					Para tener amor, para tener nuestros niños.</p>
+				  <p>Seguimos siendo chicos, pero estamos tan enamorados
+					Luchando contra viento y marea, sé que estaremos bien esta vez
+					Cariño, solo toma mi mano, seré tu chica, serás mi hombre
+					Y veo mi futuro en tus ojos.</p>
+				  <p>Bueno cariño, estoy bailando en la oscuridad, contigo entre mis brazos
+					Descalzo en el césped, escuchando nuestra canción favorita
+					Cuando te vi en ese vestido, luciendo tan hermosa
+					No merezco esto, cariño, luces tan perfecta esta noche.</p>
+				  <p>Cariño, estoy bailando en la oscuridad, contigo en mis brazos
+					Descalzo en el césped, escuchando nuestra canción favorita
+					Tengo fe en lo que veo, ahora sé que me he encontrado
+					A un ángel en persona, y ella se ve perfecta
+					No, no lo merezco, te ves perfecto esta noche</p>
 				</article>
 
 			<div id="display"><p></p></div>
